fix: failed tx error was not showing properly

--- a/src/assets/style/pages/_transactions.scss
+++ b/src/assets/style/pages/_transactions.scss
@@ -83,7 +83,7 @@
         display: block;
 
         .tooltip {
-          max-width: 200px;
+          max-width: 400px;
           height: auto;
           white-space: initial;
           width: max-content;
